# fund-selector

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUND_ANALYSIS_WORKFLOW.md  LICENSE  README.md  README_EN.md  SECURITY.md  findings.md  fund_selector.py  generate_corrected_excel.py  import_alipay.py  progress.md  requirements.txt  skill-design-brief.md  task_plan.md  weekly_report.py
.claude/: settings.local.json
.claude/commands/cn-equity-research/: earnings.md  initiate.md  morning-note.md  screen.md  sector.md  thesis.md
.github/workflows/: test.yml
.planning/: PLAN-P1.md  PLAN-P2.md  PLAN-P3.md  PLAN-P4.md  PLAN-P6.md  PLAN-v3.md  PLAN-v4.md  findings.md  fund-selector-capabilities.md  progress.md  skill_analysis_fund-recommend.md  skill_analysis_fund-selector.md  skill_analysis_fund-weekly-report.md  task_plan.md
cn-mutual-fund/: .mcp.json  README.md  pyproject.toml
cn-mutual-fund/src/cn_mutual_fund/: __init__.py  __main__.py  server.py
cn-mutual-fund/src/cn_mutual_fund/tools/: fund_dividend.py  fund_flow.py  fund_info.py  fund_manager.py  fund_nav.py  fund_portfolio.py  fund_ranking.py  fund_rating.py
cn-mutual-fund/src/cn_mutual_fund/utils/: cache.py  fallback.py  formatter.py
iteration-3/: SKILL.md
iteration-3-workspace/: benchmark.md  report.html
iteration-3/evals/: evals.json
iteration-3/references/: rule-definitions.md
iteration-3/scripts/: generate_recommend.py  get_macro.py  pipeline.py  validate_funds.py
registry/: registry.yaml
temp-package/: fund-deep-research.skill
(+220 files in other folders)
